--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_TITLE=django_app
 
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
-DB_USER=sino0on
-DB_PASSWORD=10052004
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_NAME=djangoapp
 
 POSTGRES_HOST=postgres
