--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,14 @@ services:
     depends_on:
       - postgres
     restart: always
+
+  bot:
+    build: .
+    volumes:
+      - .:/core
+    command: bash -c "python bot.py"
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+    restart: always
