--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-decouple==3.8
+pytz==2024.2
 requests==2.32.3
 SQLAlchemy==2.0.36
 sqlparse==0.5.2
