--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
+django-cors-headers==4.6.0
 frozenlist==1.5.0
 gunicorn==23.0.0
 idna==3.10
