--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=djangoapp
+
+TOKEN=7756332697:AAGc4BqYhdzOQUhJk-1rlLVL3W0oov8PpCs
